[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/objects/1_d18.png" type="Texture" id=1]
[ext_resource path="res://assets/images/objects/2_d19.png" type="Texture" id=2]
[ext_resource path="res://src/objects/Lever.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 20.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.5, 3 )

[node name="Lever" type="Node2D"]
script = ExtResource( 3 )

[node name="Lever" type="RigidBody2D" parent="." groups=["bodies"]]
position = Vector2( 0, 1 )
collision_layer = 16
collision_mask = 3
gravity_scale = 0.0
contacts_reported = 3
contact_monitor = true

[node name="Lever" type="Sprite" parent="Lever"]
position = Vector2( 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lever"]
shape = SubResource( 1 )

[node name="Base" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="Sprite" type="Sprite" parent="Base"]
position = Vector2( 0, 27 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base"]
position = Vector2( 0, 28 )
shape = SubResource( 2 )

[node name="LeftLimit" type="StaticBody2D" parent="."]
position = Vector2( -21, 0 )
collision_layer = 128
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftLimit"]
shape = SubResource( 3 )

[node name="RightLimit" type="StaticBody2D" parent="."]
position = Vector2( 21, 0 )
collision_layer = 128
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightLimit"]
shape = SubResource( 3 )

[node name="PinJoint2D" type="PinJoint2D" parent="."]
position = Vector2( 0, 23 )
node_a = NodePath("../Base")
node_b = NodePath("../Lever")

[connection signal="body_entered" from="Lever" to="." method="_on_Lever_body_entered"]
